# chess-v2

./: .gitignore  CMakeLists.txt  LICENSE
images/: white-king.png:Zone.Identifier
include/: attacks.hpp  choppedfish_engine.hpp  config.hpp.in  engine.hpp  eval.hpp  experimental_engine.hpp  game.hpp  gui.hpp  material_engine.hpp  move_notation.hpp  movegen.hpp  position.hpp  position_engine.hpp  pv_engine.hpp  random_engine.hpp  search.hpp  uci.hpp  uci_client.hpp  zobrist.hpp
src/: CMakeLists.txt  attacks.cpp  choppedfish_engine.cpp  eval.cpp  experimental_engine.cpp  game.cpp  gui.cpp  main.cpp  main_uci.cpp  material_engine.cpp  movegen.cpp  position.cpp  position_engine.cpp  pv_engine.cpp  random_engine.cpp  search.cpp  uci.cpp  uci_client.cpp  zobrist.cpp
tests/: CMakeLists.txt  perft_tests.cpp
